[package]
name = "jumboscan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
default-net = "0.16.1"
hex = "0.4.3"
internet-checksum = "0.2.1"
libc = "0.2.147"
pest = "2.7.0"
pest_derive = "2.7.0"
thiserror = "1.0.43"
perfect_rand = { git = "https://github.com/mat-1/perfect_rand/", rev = "725343f" }
bytemuck = "1.13.1"
simd-json = { version = "0.10.4", features = ["value-no-dup-keys"] }
mimalloc = { version = "0.1.37", default-features = false }
rand = "0.8.5"
socket2 = { version = "0.5.3", features = ["all"] }
crossbeam = "0.8.2"

[dev-dependencies]
proptest = "1.2.0"
proptest-derive = "0.3.0"

[profile.release]
lto = true
